# mylearnav

./: Untitled Diagram.drawio  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cxp/myffmpeglearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cxp/myffmpeglearn/: AudioRecorder.java  CameraUtil.java  MediaStoreUtils.java  RGBAConsumerBuffer.kt  RGBAProducer.kt  RTMPActivity.kt  RecordAct.kt  RtcActivity.kt  StartActivity.kt  TestAvtivity.kt  playeractivity.java
app/src/main/res/layout/: activity_main.xml  activity_playeractivity.xml  activity_rtc.xml  activity_start.xml  activity_test_avtivity.xml  item_remote.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cxp/myffmpeglearn/: ExampleUnitTest.kt
ffplay/: build.gradle
ffplay/src/androidTest/java/com/mjl/ffplay/: ExampleInstrumentedTest.java
ffplay/src/main/: AndroidManifest.xml
ffplay/src/main/cpp/: CMakeLists.txt  ffplay.cpp
ffplay/src/main/cpp/common/: AVPacketQueue.cpp  ThreadSafeQueue.h
ffplay/src/main/cpp/include/libavcodec/: avcodec.h  d3d11va.h  dirac.h  dxva2.h  xvmc.h
ffplay/src/main/cpp/include/libavformat/: avformat.h
ffplay/src/main/cpp/include/libavutil/: avutil.h  channel_layout.h  common.h  encryption_info.h  error.h  frame.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  hwcontext_vaapi.h  log.h
ffplay/src/main/cpp/play/: FFMediaPlayer.cpp  FFMediaPlayer.h
ffplay/src/main/cpp/play/decode/: AudioDecoder.cpp  AudioDecoder.h  DeMuxer.cpp  DeMuxer.h  MessageCallback.h  PacketDecoder.h  VideoDecoder.cpp  VideoDecoder.h  VideoHWDecoder.cpp  VideoHWDecoder.h  VideoSoftDecoder.cpp  VideoSoftDecoder.h
ffplay/src/main/cpp/play/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
ffplay/src/main/cpp/play/render/audio/: AudioGLRender.cpp  OpenSLRender.cpp
ffplay/src/main/cpp/play/render/video/: VideoGLRender.cpp  VideoGLRender.h  VideoRender.h
ffplay/src/main/cpp/util/: ImageDef.h
ffplay/src/main/java/com/mjl/ffplay/: FFPlayEngine.java  MyGLRender.java  MyGLSurfaceView.java  NativeLib.java  OpenGLVideoRender.java
ffplay/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libswresample.pc  libswscale.pc
ffplay/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavfilter.pc  libavformat.pc
ffplay/src/test/java/com/mjl/ffplay/: ExampleUnitTest.java
ffrecord/: build.gradle
ffrecord/src/main/cpp/: CMakeLists.txt  YuvUtil.cpp  nativelibffmpeg.cpp
ffrecord/src/main/cpp/encoder/: AudioEncoder.h  EnMuxer.cpp  EnMuxer.h  Encoder.h  HWVideoEncoder.cpp  HWVideoEncoder.h  MessageCallback.h  SoftAudioEncoder.cpp  SoftAudioEncoder.h  SoftVideoEncoder.cpp  SoftVideoEncoder.h  VideoEncoder.h
ffrecord/src/main/cpp/ffmuxer/: EnMuxer.cpp  EnMuxer.h  Encoder.h  HWFFVideoEncoder.cpp  HWFFVideoEncoder.h  SoftAudioEncoder.cpp  SoftVideoEncoder.cpp  SoftVideoEncoder.h  VideoEncoder.h
ffrecord/src/main/cpp/hwcodec/: HWAudioEncoder.cpp  HWAudioEncoder.h  HWEncoder.h  HWVideoEncoder.cpp  HWVideoEncoder.h  MP4Muxer.h  NativeMediaMuxer.cpp  NativeMediaMuxer.h
ffrecord/src/main/cpp/include/libavcodec/: avcodec.h  mediacodec.h  qsv.h  vdpau.h  videotoolbox.h
ffrecord/src/main/cpp/include/libavformat/: avio.h
ffrecord/src/main/cpp/include/libavutil/: downmix_info.h
ffrecord/src/main/cpp/recorder/: IEnMuxer.h  MediaRecorder.cpp  MediaRecorder.h  MediaRecorderContext.cpp  MediaRecorderContext.h  MessageCallback.h  SingleAudioRecorder.cpp  SingleAudioRecorder.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h
ffrecord/src/main/cpp/softencoder/: AudioEncoder.h  EnMuxer.cpp  EnMuxer.h  SoftAudioEncoder.cpp  SoftAudioEncoder.h  SoftVideoEncoder.cpp
ffrecord/src/main/cpp/util/: LogUtil.h  yuvutil.h
ffrecord/src/main/java/com/cxp/nativelibffmpeg/: MP4JavaRecorder.java  MediaRecorderContext.kt  VideoNdkRecorder.java  YuvUtil.java
ffrecord/src/main/jniLibs/arm64-v8a/pkgconfig/: libavformat.pc  libavutil.pc
ffrecord/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffrecord/src/test/java/com/cxp/nativelibffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
hapirtmp/: build.gradle
hapirtmp/src/androidTest/java/com/hapi/rtmpliving/: ExampleInstrumentedTest.kt
hapirtmp/src/main/: AndroidManifest.xml
hapirtmp/src/main/cpp/: CMakeLists.txt  rtmpliving.cpp
hapirtmp/src/main/cpp/common/: ThreadSafeQueue.h
hapirtmp/src/main/cpp/hwcodec/: HWAudioEncoder.cpp  HWAudioEncoder.h  HWEncoder.h  HWVideoEncoder.cpp  HWVideoEncoder.h  NativePusher.cpp  NativePusher.h  RTMPPush.cpp  RTMPPush.h
hapirtmp/src/main/cpp/recorder/: IPusher.h  MediaRecorderContext.cpp  MediaRecorderContext.h  MessageCallback.h
hapirtmp/src/main/cpp/util/: LogUtil.h
libopengles/: build.gradle
libopengles/src/main/: AndroidManifest.xml
libopengles/src/main/cpp/sample/: BasicLightingSample.cpp
libyuv/src/main/cpp/: YuvJni.cpp
mediasoupRTC/: build.gradle
mediasoupRTC/src/main/: AndroidManifest.xml
nativelibFfmpeg/: build.gradle
nativelibFfmpeg/src/main/: AndroidManifest.xml
nativelibFfmpeg/src/main/cpp/: nativelibffmpeg.cpp
nativelibFfmpeg/src/main/cpp/recorder/: MediaRecorder.cpp  MediaRecorder.h  MediaRecorderContext.cpp  MediaRecorderContext.h  SingleAudioRecorder.cpp  SingleAudioRecorder.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h
nativelibFfmpeg/src/main/cpp/util/: ImageDef.h  myyuvutil.h
openglbeauty/: build.gradle
openglbeauty/src/main/: AndroidManifest.xml
openglbeauty/src/main/cpp/: CMakeLists.txt  beauty.cpp
openglbeauty/src/main/cpp/include/: HH.h
openglbeauty/src/main/cpp/render/: BaseBeautyRender.cpp  BaseBeautyRender.h  DynimicMesh.h  EGLTools.h  FBOTools.h  LUTBeautyRender.h
webrtc1v1/: build.gradle
webrtc1v1/src/main/: AndroidManifest.xml
webrtc1v1/src/main/res/layout/: activity_call_video.xml  activity_main.xml
webrtc1v1/src/main/res/values/: strings.xml
(+51 files in other folders)
